--- a/nextflow.config
+++ b/nextflow.config
@@ -6,20 +6,20 @@ process {
    
     withLabel: 'med' {
         executor = 'pbs'
-        memory ='100G'
+        memory ='64G'
         time = '1h'
         cpus = 4
     }
     withLabel: 'high' {
         executor = 'pbs'
         time = '1h'
-        memory ='100G'
-        clusterOptions = { "-l nodes=1:ppn=2:gpus=2" }
+        memory ='64G'
+        clusterOptions = { "-l nodes=4:ppn=2:gpus=2" }
     }
 }
 
 
-includeConfig "$projectDir/csvParams.config"
+includeConfig "$projectDir/paramsElena.config"
 singularity.enabled = true
 
 
