Salmon step added

--- a/nextflow.config
+++ b/nextflow.config
@@ -59,7 +59,7 @@ process {
     time = 1.h
   }
   withLabel:high {
-    beforeScript = 'module load PyTorch/1.12.0-foss-2022a-CUDA-11.7.0'
+    beforeScript = 'module load PyTorch-bundle/2.1.2-foss-2023a-CUDA-12.1.1'
     memory = 100.GB
     time = 4.h
     cpus = 4
