primer trimming added

--- a/Params.config
+++ b/Params.config
@@ -1,12 +1,17 @@
 params {
     // General parameters
-    reads ="/scratch/gent/vo/000/gvo00027/projects/FAP/200325_TLP03_TLP08/*_{R1,R2}_001.fastq.gz"
+    //reads ="/scratch/gent/vo/000/gvo00027/projects/FAP/200325_TLP03_TLP08/*_{R1,R2}_001.fastq.gz"
+    reads ="/scratch/gent/vo/000/gvo00027/projects/FAP/test_data/*_{R1,R2}_001.fastq.gz"
     CSVfile = "$baseDir/test/SampleSheet_HVD.csv"
-    outdir="/user/gent/446/vsc44685/ScratchVO_dir/tests"
+    outdir="/user/gent/446/vsc44685/ScratchVO_dir/tests_NotrimPrimers_v2"
     flavour = "QSPLike" // accepted ST, QSP or QSPLike
     
     //Subsampling with SeqTk
-    //Subs = 2200000 //uncomment if subsampling is needed
+    Subs = 2000 //uncomment if subsampling is needed
+
+    //cutadapt
+    //add path to a fasta file containing primer sequences
+    primer_fasta = "/scratch/gent/vo/000/gvo00027/projects/FAP/200325_TLP03_TLP08/Low_primers.fasta"
 
     //Demux
     N69 = 9 //threshold for 42k arrray, determined from simulations
