salmon removed QSPlike

--- a/Params.config
+++ b/Params.config
@@ -3,10 +3,12 @@ params {
     reads = "/scratch/gent/vo/000/gvo00027/projects/BSL/NSQ2K_223/250910_VH00559_223_AAHC2G3M5/Analysis/20250910_TLP11_Spatial_BSL_P1/*_{R1,R2}_001.fastq.gz"
     CSVfile = "$baseDir/test/SampleSheet_HVD.csv"
     outdir="/user/gent/446/vsc44685/ScratchVO_dir/test_1"
-    flavour = "QSP" // accepted ST, QSP or QSPLike
+    flavour = "QSPLike" // accepted ST, QSP or QSPLike
     
     //Subsampling with SeqTk
     //Subs = 2000 //uncomment if subsampling is needed
+    //uncomment prime_fasta if trimming of primers is needed
+    //primer_fasta = "/scratch/gent/vo/000/gvo00027/projects/FAP/200325_TLP03_TLP08/Low_primers.fasta"
 
 
     //Demux
