--- a/nextflow.config
+++ b/nextflow.config
@@ -48,16 +48,21 @@ process {
     time = 30.min
   }
   withLabel:low {
-    cpus =  2
-    memory = 64.GB
+    cpus =  1
+    memory = 32.GB
     time = 30.min
   }
   withLabel:med {
-    cpus = 4
-    memory = 100.GB
-    time = 1.h
+    cpus = 2
+    memory = 64.GB
+    time = 2.h
   }
   withLabel:high {
+    cpus = 4
+    memory = 100.GB
+    time = 4.h
+  }
+  withLabel:gpu {
     beforeScript = 'module load PyTorch-bundle/2.1.2-foss-2023a-CUDA-12.1.1'
     memory = 100.GB
     time = 4.h
